<resources>
    <string name="app_name" translatable="false">Dome1</string>

    <string name="user_digits" translatable="false">0123456789abcdefghijklmnopqrstuvwxyz@_.ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="mobile_email">手机号码，邮箱</string>
    <string name="login_pwd">登录密码</string>
    <string name="login">登录</string>
    <string name="register_count">注册账号</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="input_pwd_agin">再次输入密码</string>
    <string name="update_pwd">修改密码</string>
    <string name="sure">确定</string>
    <string name="sure_update">确定修改</string>
    <string name="tab_name_gn">国内</string>
    <string name="tab_name_gj">国际</string>
    <string name="tab_name_yl">娱乐</string>
    <string name="tab_name_ty">体育</string>
    <string name="tab_name_wd">我的</string>

</resources>