<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/nightBlue"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:background="@color/home_tab_background"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbtnGN"
            style="@style/radio_button_style"
            android:drawableTop="@drawable/sel_guonei"
            android:text="@string/tab_name_gn" />

        <RadioButton
            android:id="@+id/rbtnGJ"
            style="@style/radio_button_style"
            android:drawableTop="@drawable/sel_guoji"
            android:text="@string/tab_name_gj" />

        <RadioButton
            android:id="@+id/rbtnYL"
            style="@style/radio_button_style"
            android:drawableTop="@drawable/sel_yule"
            android:text="@string/tab_name_yl" />

        <RadioButton
            android:id="@+id/rbtnTY"
            style="@style/radio_button_style"
            android:drawableTop="@drawable/sel_tiyu"
            android:text="@string/tab_name_ty" />

        <RadioButton
            android:id="@+id/rbtnWD"
            style="@style/radio_button_style"
            android:drawableTop="@drawable/sel_wode"
            android:text="@string/tab_name_wd" />
    </RadioGroup>
</LinearLayout>